# robotics-programming-platform

./: .gitignore  DEVELOPEMNT.md  README.md  config.py  dependencies.json  robotics-programming-platform.code-workspace
editor/: .gitignore  CMakeLists.txt  conftest.py  editor.json  imgui.ini  main.cpp  main.py  pytest.ini  requirements.txt
editor/Engine/: __init__.py
editor/assets/uis/: logic_window.ui  new_project_dialog.ui  project_main_window.ui
editor/components/dialogs/: __init__.py  new_project_dialog.py
editor/components/list_widgets/: __init__.py
editor/components/list_widgets/project_structure_widget/: item.py  view.py  view_model.py
editor/components/opengl_widgets/logic_opengl_widget/: view.py
editor/constants/: constants.py
editor/converted/: project_main_window_ui.py
editor/models/: __init__.py  application.py  function_model.py  project_state.py
editor/tests/: project_main_window_test.py
editor/tests/utils/: __init__.py
editor/tests/utils/assertions/: __init__.py  application_assert.py  application_assertion.py  assertion.py  function_file_assert.py  project_assert.py  project_des_assert.py  project_des_assertion.py
editor/tests/utils/builder/: __init__.py  application_builder.py  builder.py  project_builder.py
editor/utils/: __init__.py  config.py  dependency_injection.py  logger.py  signal.py
editor/utils/__tests__/: dependency_injection_test.py  signal_test.py
editor/utils/__tests__/ui/: project_main_window_test.py
editor/views/: __init__.py  project_main_window.py
editor/views/logic_window/: view.py
editor/views/project_main_window/: __init__.py  view.py  view_model.py
editor/windows/: editor.cpp  editor.h  function_window.cpp  function_window.h
gruntime/: .gitignore  CMakeLists.txt  imgui.ini  main.cpp
libraries/: .gitignore  CMakeLists.txt  README.md
libraries/applications/: CMakeLists.txt  README.md
libraries/applications/include/applications/: applications.h
libraries/applications/include/applications/graphic_session/: graphic_session.h  manager.h  session.h
libraries/applications/include/applications/structures/: function.h  project.h  structures.h
libraries/applications/include/applications/test_system/: command_stack.h  test_system.h  test_system_impl.h  utils.h
libraries/applications/src/: command_stack.cpp  function.cpp  manager.cpp  project.cpp  session.cpp  test_system.cpp  utils.cpp
libraries/applications/src/__tests__/: test_common.h  test_project.cpp
libraries/core/: CMakeLists.txt  README.md
libraries/core/include/core/: array.h  assertions.h  common.h  core.h  filesystem.h  format.h  json.h  logging.h  memory_manager.h  singleton_manager.h  string.h  timer.h
libraries/core/include/core/containers/: array.h  containers.h  list.h  queue.h  set.h  storage.h
libraries/core/include/core/handlers/: console_handlers.h
libraries/core/include/core/threading/: signal.h  thread.h  threading.h
libraries/core/src/: filesystem.cpp  format.cpp  json.cpp  logging.cpp  memory_manager.cpp  singleton_manager.cpp  string.cpp
libraries/core/src/__tests__/: storage_test.cpp  test_array.cpp  test_common.h  test_filesystem.cpp  test_format.cpp  test_json.cpp  test_list.cpp  test_set.cpp  test_signal.cpp  test_singleton_manager.cpp  test_storage.cpp  test_string.cpp  test_theading.cpp
libraries/core/src/handlers/: console_handlers.cpp
libraries/core/src/threading/: signal.cpp  signal_linux.cpp  signal_windows.cpp  thread.cpp
libraries/include/applications/: applications.h
libraries/include/applications/graphic_session/: manager.h  session.h
libraries/include/applications/language/: language.h  language_type.h
libraries/include/core/: assertions.h  core.h  filesystem.h  format.h  logging.h  map.h  profiling.h  singleton_manager.h
libraries/include/core/containers/: array.h  containers.h  set.h  stack.h  storage.h
libraries/include/core/handlers/: handlers.h
libraries/include/core/threading/: thread.h
libraries/include/modules/: modules.h
libraries/include/modules/ecs/: ecs.h  system.h
libraries/include/modules/history/: command.h  history.h  manager.h
libraries/include/modules/input/: input.h
libraries/include/modules/renderer/: imgui_internal.h  renderer.h  renderer_impl.h  test_utils.h  texture.h  type.h
libraries/include/modules/structures/: function.h  project.h  structures.h  tag.h  utils.h
libraries/include/modules/test_system/: test_system.h  test_system_impl.h  utils.h
libraries/modules/: CMakeLists.txt  README.md
libraries/modules/include/modules/: arg_parser.h  modules.h  storage.h
libraries/modules/src/: arg_parser.cpp  storage.cpp
libraries/modules/src/__tests__/: arg_parser_test.cpp  ecs_test.cpp  main.cpp  storage_test.cpp  test_common.h
libraries/modules/src/ecs/: esc.cpp  system.cpp
libraries/modules/src/input/: input.cpp
libraries/modules/src/input_system/: input_system.cpp
libraries/modules/src/renderer/: imgui_internal.cpp  imgui_test_utils.cpp  line.cpp  program.cpp  rectangle.cpp  renderer.cpp  test_utils.cpp  texture.cpp
libraries/modules/src/structures/: editor_data.cpp  project.cpp
libraries/modules/src/test_system/: test_system.cpp  utils.cpp
libraries/src/applications/: manager.cpp  session.cpp
libraries/src/applications/graphic_session/: manager.cpp  session.cpp
libraries/src/core/: filesystem.cpp  format.cpp  profiling.cpp  string.cpp  timer.cpp
libraries/src/modules/: arg_parser.cpp
libraries/src/modules/ecs/: esc.cpp  system.cpp
libraries/src/modules/history/: command.cpp  manager.cpp
libraries/src/modules/input/: input.cpp
libraries/src/modules/renderer/: imgui_internal.cpp  line.cpp  program.cpp  rectangle.cpp  renderer.cpp  test_utils.cpp  texture.cpp
libraries/src/modules/structures/: editor_data.cpp  function.cpp  project.cpp
libraries/src/modules/test_system/: test_system.cpp  utils.cpp
libraries/tests/: test.cpp  test_common.h
libraries/tests/core/: test_array.cpp  test_list.cpp  test_queue.cpp  test_stack.cpp
libraries/tests/modules/: ecs_test.cpp  test_history.cpp  test_project.cpp
(+138 files in other folders)
